--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "dependencies": {
     "history": "^4.7.2",
+    "materialize-react": "^0.2.0-alpha.20",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^2.1.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-router": "^2.1.2",
-    "redux-thunk": "^2.2.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/styles -o src/styles",
